// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Button snapshots with default props 1`] = `
<div>
  <button
    accessibility="label"
    class="sc-bcHOTY sc-dkHyXG fVJZLw"
    id="label"
    variant="primary"
  >
    <p
      class="sc-gsMHZj bWuTyU sc-hLljAB cvQGLR"
      variant="md"
    >
      Text
    </p>
  </button>
</div>
`;

exports[`Component: Button snapshots with loading 1`] = `
<div>
  <button
    accessibility="label"
    class="sc-bcHOTY sc-dkHyXG knOvRL"
    disabled=""
    id="label"
    variant="primary"
  />
</div>
`;

exports[`Component: Button snapshots with other props 1`] = `
<div>
  <button
    accessibility="label"
    class="sc-bcHOTY sc-dkHyXG knOvRL"
    disabled=""
    id="label"
    variant="secondary"
  >
    <p
      class="sc-gsMHZj bWuTyU sc-hLljAB cvQGLR"
      disabled=""
      variant="md"
    >
      Text
    </p>
  </button>
</div>
`;
